--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
 
+
 body {
   font-family: Arial;
 }
 
 .brushed_circle {
   stroke: black;
-  stroke-width: 2;
-  fill:  darkseagreen;
+  stroke-width: 4px;
 }
+   
